src/objects/Member__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BirthDate__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CellPhone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>E-mail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor__c</fullName>
        <label>Labor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberName__c</fullName>
        <label>Member Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Member</label>
    <listViews>
        <fullName>Members</fullName>
        <columns>NAME</columns>
        <columns>MemberName__c</columns>
        <columns>Labor__c</columns>
        <filterScope>Everything</filterScope>
        <label>Members</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>M{000000}</displayFormat>
        <label>Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>